# SoftGLRender

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
assets/: assets.json
assets/AfricanHead/: african_head.mtl
assets/Brickwall/: brickwall.mtl
assets/GlassTable/: license.txt  scene.gltf
assets/Robot/: license.txt  scene.gltf
assets/Shaders/: basic.vert  frag.spv  vert.spv
cache/SPV/: 03865fa0f009e90d043d36fbede0f158_codes.spv  0dd5ab060cee6174f79222d0a46fb19d_codes.spv  0e5f27e563c1ec1acbd86fe6c0e94fda_codes.spv  0f5bed5de3c6f4cd9618e0d397004230_codes.spv  0fb0b4aad0ba5728de468808f9e653a6_codes.spv  0ffd6d95936fc66ecd78bbd140f3621c_codes.spv  1bd675b0b64d99da290c578a85aa621e_codes.spv  1fcce9269b585cea83b65d7574b35fd6_codes.spv  26df8639037116f003c190c69d114ce3_codes.spv  2d5cd93a84d23547a4f27318bd8db92e_codes.spv  307111104eac53d8eaf5c10605f4d136_codes.spv  31976955c62202d8cc92caa0adbba55b_codes.spv  3398fb9b3067355e156abc2c5884ce8f_codes.spv  35352f9db3a115f97b2db865c90c0fbe_codes.spv  36e72f38489b44d058888d51c237febc_codes.spv  3ca7209a5334337f812fd710b61cb4bd_codes.spv  4ef0ef0fcfd5fb846b1f5021dee3c694_codes.spv  4f8b28360b9539356894e3a206f61675_codes.spv  57136fa006cca9ce7dda0813a728a152_codes.spv  58cc5c914763953e67300b9c3fc7c810_codes.spv  5c2e8a29cc36ab84ab527a1d3cb988d9_codes.spv  6031fb14592a3efebf3d433973164f2a_codes.spv  6b67491dfdd10973ac5776dab989f622_codes.spv  6d2b45f5121ab47bdd34417cabd7eb38_codes.spv  6da1541c874ac1481c9cb08b986f9470_codes.spv  765dbbd14f06a6f1c30c9a2d4bf9b7f1_codes.spv  7c1be40156791707c62ecf1f49b6daa6_codes.spv  7ff7299c3ff5d12f1c45c489dbdfe01b_codes.spv  80fdb8ad20f1c9de68de56cc94bc9a22_codes.spv  8463c33265711afeadeffdcc54e86a98_codes.spv  8adc3c037fb891463d1d731f73db4ec5_codes.spv  92c13ce200be7f52ba57a38891d486ae_codes.spv  9567edb6f4ea38b253ecd63897094973_codes.spv  97d5f5ef0fd5b7c57b300ee1c8fa710e_codes.spv  a57281d31ab178b20cf2f68d64f2c1e2_codes.spv  a5b0ce0364247c9468bdd5b4f2dcc158_codes.spv  a92a9b232faf919a57f30a80a8c1fdff_codes.spv  ae030d51935d35779e788f7aaa1dd959_codes.spv  beb429f24264eddf35af531bb70be9cb_codes.spv  c3405c49c2143c1c5f3ad73c2fab4aa9_codes.spv  (+7 more)
glfw/lib-vc2022/: glfw3_mt.lib  glfw3dll.lib
src/: main.cpp
src/Base/: Buffer.h  FileUtils.h  Geometry.cpp  Geometry.h  HashUtils.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  MemoryUtils.h  Platform.h  ThreadPool.h  Timer.cpp  Timer.h  UUID.h
src/Render/: BoundingBox.cpp  BoundingBox.h  Framebuffer.h  Geometry.cpp  Geometry.h  PipelineStates.h  RenderState.h  RenderStates.h  Renderer.h  ShaderProgram.h  Texture.h  Uniform.cpp  Uniform.h  Vertex.h
src/Render/OpenGL/: EnumsOpenGL.h  FramebufferOpenGL.h  GLSLUtils.cpp  GLSLUtils.h  OpenGLUtils.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderProgramOpenGL.h  TextureOpenGL.h  UniformOpenGL.h  VertexOpenGL.h
src/Render/Software/: BlendSoft.h  DepthSoft.h  FramebufferSoft.cpp  FramebufferSoft.h  RendererInternal.h  RendererSoft.cpp  RendererSoft.h  SamplerSoft.h  ShaderProgramSoft.cpp  ShaderProgramSoft.h  ShaderSoft.h  TextureSoft.h  UniformSoft.h  VertexSoft.cpp  VertexSoft.h
src/Render/Vulkan/: EnumsVulkan.h  FrameBufferVulkan.cpp  FramebufferVulkan.h  PipelineStatesVulkan.h  RendererVulkan.cpp  RendererVulkan.h  ShaderProgramVulkan.h  TextureVulkan.cpp  TextureVulkan.h  UniformVulkan.h  VKContext.cpp  VKContext.h  VKGLInterop.cpp  VKGLInterop.h  VertexVulkan.h  VulkanInc.h  VulkanLoader.cpp  VulkanLoader.h  VulkanUtils.cpp  VulkanUtils.h
src/Viewer/: Camera.cpp  Camera.h  Config.h  ConfigPanel.cpp  ConfigPanel.h  Cube.h  Environment.cpp  Environment.h  Main.cpp  Material.cpp  Material.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  QuadFilter.cpp  QuadFilter.h  RenderDebug.cpp  RenderDebug.h  Viewer.cpp  Viewer.h  ViewerManager.h  ViewerOpenGL.h  ViewerSoft.h  ViewerSoftware.h  ViewerVulkan.h
src/app/: Camera.cpp  Camera.h  DemoApp.cpp  DemoApp.h  Environment.cpp  Environment.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  QuadFilter.cpp  QuadFilter.h  SettingPanel.cpp  SettingPanel.h  Settings.h  camera.cpp  camera.h  demo_app.cpp  demo_app.h  environment.cpp  model_loader.cpp  model_loader.h  orbit_controller.cpp  orbit_controller.h  quad_filter.cpp  quad_filter.h  setting_panel.cpp  setting_panel.h  settings.h
src/base/: bounding_box.cpp  buffer.h  common.h  file_utils.h  frame_buffer.h  glm_inc.h  hash_utils.h  image_utils.cpp  image_utils.h  logger.cpp  logger.h  memory_utils.h  model.h  shader_utils.cpp  shader_utils.h  simd.h  string_utils.h  texture.h  thread_pool.h  timer.cpp  timer.h
src/render/: bounding_box.cpp  bounding_box.h  framebuffer.h  geometry.cpp  geometry.h  render_state.h  renderer.h  shader_program.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex.h
src/render/opengl/: enums_opengl.h  framebuffer_opengl.h  material.h  (+10 more)
src/renderer/: BoundingBox.cpp  BoundingBox.h  FrameBuffer.h  Geometry.cpp  Geometry.h  Graphic.cpp  Graphic.h  Memory.h  Model.h  RenderContext.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  ThreadPool.h  bounding_box.h  common.h  frame_buffer.h  graphic.h  render_context.h  renderer.h  shader.h  texture.h
src/shader/: BRDFLutShader.h  BlinnPhongShader.h  FXAAShader.h  IrradianceShader.h  PBRShader.h  PrefilterShader.h  SkyboxShader.h  blinn_phong_shader.h  fxaa_shader.h  irradiance_shader.h  pbr_shader.h  prefilter_shader.h  skybox_shader.h
src/utils/: Timer.cpp  Utils.cpp  Utils.h  file_utils.h  memory_utils.h  timer.h  utils.cpp  utils.h
src/view/: camera.cpp  camera.h  config.h  config_panel.cpp  config_panel.h  cube.cpp  cube.h  environment.cpp  environment.h  material.cpp  material.h  model.h  model_loader.cpp  model_loader.h  orbit_controller.cpp  orbit_controller.h  quad_filter.cpp  quad_filter.h  setting_panel.cpp  setting_panel.h  settings.h  viewer.cpp  viewer.h  viewer_manager.h  viewer_opengl.cpp  viewer_opengl.h  viewer_soft.cpp  viewer_soft.h
(+88 files in other folders)
